Fixed font, spacing and arrow links on player landing page.

--- a/css/main.scss
+++ b/css/main.scss
@@ -46,10 +46,6 @@ $blue: #646c7a;
 $grey: #424242;
 $burgandy: #611529;
 
-$GothamBoldStack: GothamBold, Arial, serif;
-$GothamMediumStack: GothamMedium, Arial, serif;
-$GothamBookStack: GothamBook, Arial, serif;
-
 $eleven: 0.6875;            /* 11px: 1 / (16x11) = 0.6875   */
 $twelve: 0.750em;           /* 12px: 1 / (16x12) = 0.750    */
 $thirteen: 0.8125em;        /* 13px: 1 / (16x13) = 0.8125em */
@@ -941,7 +937,9 @@ textarea {
 */
 .arrow-list {
     margin-left: 0 !important;
+    margin-bottom: 2em;
     list-style: none !important;
+
     a {
         display: block;
         padding: 0.2em 2em 0.2em 0;
@@ -980,7 +978,9 @@ textarea {
     }
 
     a {
-        background-position: 95% 50%;
+        padding-left: 2.5em;
+        padding-right: 0.2em;
+        background-position: 5% 25%;
     }
 
     span {
@@ -1993,7 +1993,6 @@ textarea {
 .tile__image {
     display: block;
     width: 100%;
-    max-height: 250px;
 }
 
 .tile__overlay {
@@ -2092,6 +2091,7 @@ textarea {
     }
 
     ul {
+        overflow: hidden;
         margin-left: 1em;
         list-style: disc inside;
         color: #424242;
@@ -2101,7 +2101,9 @@ textarea {
 
 .content--wide {
     width: 100%;
+    padding-bottom: 6em;
     margin-right: 0;
+    margin-bottom: 10px;
 }
 
 @include breakpoint(small) {
@@ -2165,6 +2167,7 @@ textarea {
     font-size: $thirty-four;
     color: #fff;
     text-transform: uppercase;
+    letter-spacing: -3px;
 }
 
 .sidebar-nav {
